{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 126,
  "lineage": "a5825173-e925-3d93-788b-822640580ee7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-079bf5dcce0879a51",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:subnet/subnet-079bf5dcce0879a51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.32.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079bf5dcce0879a51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654512735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          }
        },
        {
          "index_key": "subnet-095cf1ee779ca7227",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:subnet/subnet-095cf1ee779ca7227",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 8186,
            "cidr_block": "10.0.64.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095cf1ee779ca7227",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654512735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          }
        },
        {
          "index_key": "subnet-0bfe1445bfd46a1d7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:subnet/subnet-0bfe1445bfd46a1d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 8186,
            "cidr_block": "10.0.96.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfe1445bfd46a1d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654512735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          }
        },
        {
          "index_key": "subnet-0eef94b0bf92485b4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:subnet/subnet-0eef94b0bf92485b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.0.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eef94b0bf92485b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654512735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee069d939a20f498",
            "arn": "arn:aws:ec2:us-east-1:654654512735:elastic-ip/eipalloc-0ee069d939a20f498",
            "association_id": "eipassoc-09c35940d7bf2b700",
            "domain": "vpc",
            "id": "eipalloc-0ee069d939a20f498",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b469ebaf79753d6f",
            "private_dns": "ip-10-0-73-160.ec2.internal",
            "private_ip": "10.0.73.160",
            "public_dns": "ec2-100-28-181-26.compute-1.amazonaws.com",
            "public_ip": "100.28.181.26",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1b03b372e9c529f",
            "arn": "arn:aws:ec2:us-east-1:654654512735:elastic-ip/eipalloc-0d1b03b372e9c529f",
            "association_id": "eipassoc-0fac4c5f2c3ae9108",
            "domain": "vpc",
            "id": "eipalloc-0d1b03b372e9c529f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-031321da049cb4250",
            "private_dns": "ip-10-0-108-209.ec2.internal",
            "private_ip": "10.0.108.209",
            "public_dns": "ec2-54-167-185-5.compute-1.amazonaws.com",
            "public_ip": "54.167.185.5",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:internet-gateway/igw-0d4878d5a6536604b",
            "id": "igw-0d4878d5a6536604b",
            "owner_id": "654654512735",
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee069d939a20f498",
            "association_id": "eipassoc-0c2f8021bf71d1a0b",
            "connectivity_type": "public",
            "id": "nat-07308597495875232",
            "network_interface_id": "eni-00af17a7ef09b2078",
            "private_ip": "10.0.82.145",
            "public_ip": "100.28.181.26",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-045e60115b4de606f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1b03b372e9c529f",
            "association_id": "eipassoc-01492f08f40357faa",
            "connectivity_type": "public",
            "id": "nat-0a3e5b8e727db0ba5",
            "network_interface_id": "eni-0fc9d3d1705ccac2b",
            "private_ip": "10.0.114.101",
            "public_ip": "54.167.185.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ae11d50ab7742efa"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "backend",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:route-table/rtb-001552735ddc446ba",
            "id": "rtb-001552735ddc446ba",
            "owner_id": "654654512735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07308597495875232",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:route-table/rtb-0c08f11c13055ca60",
            "id": "rtb-0c08f11c13055ca60",
            "owner_id": "654654512735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a3e5b8e727db0ba5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frontend",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:route-table/rtb-05b44e8238ef58583",
            "id": "rtb-05b44e8238ef58583",
            "owner_id": "654654512735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4878d5a6536604b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069397ce4ed5c1355",
            "route_table_id": "rtb-001552735ddc446ba",
            "subnet_id": "subnet-045e60115b4de606f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e0ac31d75b8f2b6",
            "route_table_id": "rtb-0c08f11c13055ca60",
            "subnet_id": "subnet-0ae11d50ab7742efa"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.backend",
            "aws_subnet.backend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1f8a325ec69be2e",
            "route_table_id": "rtb-05b44e8238ef58583",
            "subnet_id": "subnet-0496b72a8d26cacb1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06224f7895b06d9b5",
            "route_table_id": "rtb-05b44e8238ef58583",
            "subnet_id": "subnet-0b037ad217d5e8298"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_nodes",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:security-group/sg-03c8957e26d0a5c40",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c8957e26d0a5c40",
            "ingress": [],
            "name": "announcements-dev-cluster-nodes",
            "name_prefix": "",
            "owner_id": "654654512735",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:security-group/sg-07e3db3cb1eebe255",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07e3db3cb1eebe255",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg-20240805183101336800000001",
            "name_prefix": "db-sg-",
            "owner_id": "654654512735",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:security-group/sg-00fee079cb639b50a",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fee079cb639b50a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow all traffic from worker nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "654654512735",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:subnet/subnet-045e60115b4de606f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045e60115b4de606f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654512735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:subnet/subnet-0ae11d50ab7742efa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae11d50ab7742efa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654512735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:subnet/subnet-0496b72a8d26cacb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0496b72a8d26cacb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654512735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:subnet/subnet-0b037ad217d5e8298",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b037ad217d5e8298",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654512735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c641ecb99b8fafa3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654512735:vpc/vpc-0c641ecb99b8fafa3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06871e5381f408679",
            "default_route_table_id": "rtb-021b528f7c825df46",
            "default_security_group_id": "sg-09e6239b55b7362f8",
            "dhcp_options_id": "dopt-0448c905aa54596ac",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c641ecb99b8fafa3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021b528f7c825df46",
            "owner_id": "654654512735",
            "tags": {
              "Name": "announcements-dev-network",
              "application": "announcements",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "announcements-dev-network",
              "application": "announcements",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}